--- a/infra/redis/redis.conf
+++ b/infra/redis/redis.conf
@@ -2,4 +2,6 @@ port 6379
 cluster-enabled yes
 cluster-config-file nodes.conf
 cluster-node-timeout 5000
+maxmemory 100mb
+maxmemory-policy noeviction
 appendonly yes
